--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,19 +1,51 @@
+@import url('https://fonts.googleapis.com/css?family=Arima+Madurai:300');
+
 html {
   font-size: 10px;
   background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
   background-size: cover;
+  background-blend-mode: soft-light;
 }
 
-body,html {
+body, html {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+.ml9 {
+  position: relative;
+  font-weight: 200;
+  font-size: 4em;
+}
+
+.ml9 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.2em;
+  padding-right: 0.05em;
+  padding-bottom: 0.1em;
+  overflow: hidden;
+}
+
+.ml9 .letter {
+  transform-origin: 50% 100%;
+  display: inline-block;
+  line-height: 1em;
+}
+
+#drum-heading {
+  font-family: 'Arima Madurai', cursive;
+  color: #ff78cb;
+  font-size: 8rem;
+  letter-spacing: -3px;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.6);
+  text-align: center;
 }
 
 .keys {
   display: flex;
   flex: 1;
-  min-height: 100vh;
+  min-height: 70vh;
   align-items: center;
   justify-content: center;
 }
@@ -28,14 +60,14 @@ body,html {
   width: 10rem;
   text-align: center;
   color: white;
-  background: rgba(0,0,0,0.4);
+  background: rgba(0, 0, 0, 0.4);
   text-shadow: 0 0 .5rem black;
 }
 
 .playing {
   transform: scale(1.1);
-  border-color: #ffc600;
-  box-shadow: 0 0 1rem #ffc600;
+  border-color: #ff78cb;
+  box-shadow: 0 0 1rem #ff78cb;
 }
 
 kbd {
@@ -47,5 +79,5 @@ kbd {
   font-size: 1.2rem;
   text-transform: uppercase;
   letter-spacing: .1rem;
-  color: #ffc600;
+  color: #ff78cb;
 }
